apps/shop/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ui
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "shop.sctp-sandbox.com"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "shop.sctp-sandbox.com"
      secretName: shop-tls # cert-manager will create this TLS secret
  rules:
    - host: "shop.sctp-sandbox.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ui
                port:
                  number: 80
